reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_multiple_structs-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Document"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Document"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Document": {
        "allOf": [
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Timestamps"
          },
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Metadata"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Document",
            "required": [
              "title"
            ],
            "properties": {
              "title": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.Metadata": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.Metadata",
        "required": [
          "author",
          "version"
        ],
        "properties": {
          "author": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "version": {
            "$ref": "#/components/schemas/u32"
          }
        }
      },
      "reflectapi_demo.tests.serde.Timestamps": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.Timestamps",
        "required": [
          "created_at",
          "updated_at"
        ],
        "properties": {
          "created_at": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "updated_at": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
