reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_multiple_structs.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Document"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Document"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Document",
        "fields": {
          "named": [
            {
              "name": "title",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "timestamps",
              "type": {
                "name": "reflectapi_demo::tests::serde::Timestamps"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "meta",
              "type": {
                "name": "reflectapi_demo::tests::serde::Metadata"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Metadata",
        "fields": {
          "named": [
            {
              "name": "author",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "version",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Timestamps",
        "fields": {
          "named": [
            {
              "name": "created_at",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "updated_at",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Document",
        "fields": {
          "named": [
            {
              "name": "title",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "timestamps",
              "type": {
                "name": "reflectapi_demo::tests::serde::Timestamps"
              },
              "required": true,
              "flattened": true
            },
            {
              "name": "meta",
              "type": {
                "name": "reflectapi_demo::tests::serde::Metadata"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Metadata",
        "fields": {
          "named": [
            {
              "name": "author",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "version",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Timestamps",
        "fields": {
          "named": [
            {
              "name": "created_at",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "updated_at",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
