reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_optional_internally_tagged_enum-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Task"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Task"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Priority": {
        "oneOf": [
          {
            "type": "object",
            "title": "High",
            "required": [
              "deadline",
              "kind"
            ],
            "properties": {
              "deadline": {
                "$ref": "#/components/schemas/std.string.String"
              },
              "kind": {
                "const": "High"
              }
            }
          },
          {
            "type": "object",
            "title": "Low",
            "required": [
              "kind"
            ],
            "properties": {
              "kind": {
                "const": "Low"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.Task": {
        "allOf": [
          {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Priority"
              }
            ]
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Task",
            "required": [
              "title"
            ],
            "properties": {
              "title": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
