reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_optional_internally_tagged_enum-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < Task > ()"
---
"""
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Literal, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field, RootModel

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsSerdeTaskHigh(BaseModel):
    """'High' variant of ReflectapiDemoTestsSerdeTask"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    title: str
    kind: Literal["High"] = Field(default="High", description="Discriminator field")
    deadline: str


class ReflectapiDemoTestsSerdeTaskLow(BaseModel):
    """'Low' variant of ReflectapiDemoTestsSerdeTask"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    title: str
    kind: Literal["Low"] = Field(default="Low", description="Discriminator field")


class ReflectapiDemoTestsSerdeTask(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsSerdeTaskHigh,
            ReflectapiDemoTestsSerdeTaskLow,
        ],
        Field(discriminator="kind"),
    ]


class ReflectapiDemoTestsSerdePriorityHigh(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    kind: Literal["High"] = Field(default="High", description="Discriminator field")
    deadline: str


class ReflectapiDemoTestsSerdePriorityLow(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    kind: Literal["Low"] = Field(default="Low", description="Discriminator field")


class ReflectapiDemoTestsSerdePriority(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsSerdePriorityHigh, ReflectapiDemoTestsSerdePriorityLow
        ],
        Field(discriminator="kind"),
    ]


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            TaskHigh = ReflectapiDemoTestsSerdeTaskHigh
            TaskLow = ReflectapiDemoTestsSerdeTaskLow
            Task = ReflectapiDemoTestsSerdeTask
            PriorityHigh = ReflectapiDemoTestsSerdePriorityHigh
            PriorityLow = ReflectapiDemoTestsSerdePriorityLow
            Priority = ReflectapiDemoTestsSerdePriority


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Task] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Task]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Task]: Response containing reflectapi_demo.tests.serde.Task data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Task,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Task] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Task]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Task]: Response containing reflectapi_demo.tests.serde.Task data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Task,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdePriority,
    ReflectapiDemoTestsSerdeTask,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
