reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_optional_internally_tagged_enum.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Task"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Task"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Priority",
        "representation": {
          "internal": {
            "tag": "kind"
          }
        },
        "variants": [
          {
            "name": "High",
            "fields": {
              "named": [
                {
                  "name": "deadline",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Low",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Task",
        "fields": {
          "named": [
            {
              "name": "title",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "priority",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::Priority"
                  }
                ]
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Priority",
        "representation": {
          "internal": {
            "tag": "kind"
          }
        },
        "variants": [
          {
            "name": "High",
            "fields": {
              "named": [
                {
                  "name": "deadline",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Low",
            "fields": "none"
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Task",
        "fields": {
          "named": [
            {
              "name": "title",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "priority",
              "type": {
                "name": "std::option::Option",
                "arguments": [
                  {
                    "name": "reflectapi_demo::tests::serde::Priority"
                  }
                ]
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
