reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_struct_and_internal_enum_combined-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < Post > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.Post,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.serde.Post, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface Audit {
        modified_by: string;
      }

      export type Content =
        | {
            type: "Text";
            body: string;
          }
        | {
            type: "Image";
            url: string;
            width: number /* u32 */;
          };

      export type Post = {
        id: string;
      } & NullToEmptyObject<reflectapi_demo.tests.serde.Audit> &
        NullToEmptyObject<reflectapi_demo.tests.serde.Content>;
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.Post,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.Post,
        {},
        reflectapi_demo.tests.serde.Post,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
